Update input_injector_win.cc to support injecting wheel-x and wheel-y events together

BUG=598434

Review URL: https://codereview.chromium.org/1865543003

Cr-Commit-Position: refs/heads/master@{#385594}

Former-commit-id: 0d2570c7d26fd026fa7f720aef5b0d4d049c643d